<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/celeste1"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-77dp">

        <ImageView
            android:id="@+id/logo_argPrograma"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="126dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitStart"
            android:src="@drawable/logo_argprograma"
            tools:ignore="ContentDescription"
            tools:src="@drawable/logo_argprograma" />

        <ImageView
            android:id="@+id/logo_ticmas"
            android:layout_width="104dp"
            android:layout_height="74dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo_ticmas"
            tools:ignore="ContentDescription"
            tools:src="@drawable/logo_ticmas" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        tools:layout_editor_absoluteX="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/titulo"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/idtexto1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/primera_cadena"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/idtexto2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/segunda_cadena"
                android:inputType="text"
                android:textColor="@color/black"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/idresultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/resultado"
                android:textColor="@color/warning" />

            <Button
                android:id="@+id/btncomparar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/celeste1"
                android:text="@string/comparar" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/celeste1"
                android:text="Reset" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/celeste1"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textAlignment="textEnd"
                android:layout_margin="15dp"
                android:text="Claudio Gomez - DNI 27726714"
                android:textColor="@color/design_default_color_background" />
        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>